[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcsllib"
version = "1.3.post5"
description = "A developing powerful Minecraft library in Python to host a Minecraft server."
readme = "README.md"
authors = [{ name = "Soumalya Das", email = "dassantu8385@gmail.com" }]
license = { text = "MIT" }
dependencies = ["PyQt6", "psutil"]
requires-python = ">=3.6"

[project.urls]
Repository = "https://github.com/pro-grammer-SD/mcsllib.git"
Github = "https://github.com/pro-grammer-SD/mcsllib"

[tool.setuptools]
py-modules = ["mcsllib"]
